# RenderEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  todo.md
Assets/Shaders/: bindless.glsl  env_cube.frag  env_cube.vert  grid.frag  grid.vert  material_common.glsl  pbr.glsl  phong.glsl  primitive.vert  shadow.glsl  shadow_map.frag  shadow_map.vert  skybox.frag  skybox.vert  surface_pbr.frag  surface_phong.frag  surface_unlit.frag  textured_quad.frag  textured_quad.vert  view.glsl
Scripts/: clean.bat  compile-shaders.bat  compile-shaders.py  generate.bat  open-sln.bat  open_sln.bat  vs.bat
Source/: Buffers.h  Camera.h  CommandBuffers.h  DebugUtils.cpp  DebugUtils.h  Device.cpp  Device.h  Framebuffer.cpp  Framebuffer.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Image.cpp  Image.h  Instance.cpp  Instance.h  PhysicalDevice.cpp  PhysicalDevice.h  RenderLoop.cpp  RenderLoop.h  RenderPass.cpp  RenderPass.h  Shader.cpp  Shader.h  Swapchain.cpp  Swapchain.h  SynchronizationPrimitives.h  Texture.cpp  Texture.h  Window.cpp  Window.h  debug_utils.cpp  defines.h  main.cpp  spirv_vk.h  vk_utils.h
Source/Core/: AssetPath.cpp  AssetPath.h  CMakeLists.txt  defines.h  file_utils.h  hash.h
Source/Editor/: CMakeLists.txt  ProjectSettings.cpp  ProjectSettings.h  ProjectWizard.cpp  ProjectWizard.h  main.cpp
Source/Engine/: ArgumentParser.cpp  ArgumentParser.h  AssetPath.h  AssimpScene.cpp  AssimpScene.h  BaseMaterialCache.cpp  BaseMaterialCache.h  BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  Camera.h  CameraController.cpp  CameraController.h  DescriptorSetLayouts.h  InputSystem.cpp  InputSystem.h  Light.cpp  Light.h  LightSystem.cpp  LightSystem.h  Material.cpp  Material.h  MaterialCache.cpp  MaterialCache.h  MaterialSystem.cpp  MaterialSystem.h  MeshAllocator.cpp  MeshAllocator.h  Model.cpp  Model.h  ModelSystem.cpp  ModelSystem.h  RenderState.h  Scene.cpp  Scene.h  SceneTree.cpp  SceneTree.h  ShaderCache.h  ShadowMap.cpp  ShadowMap.h  (+16 more)
Source/Runtime/: AssimpScene.cpp  AssimpScene.h  AssimpSceneLoader.cpp  AssimpSceneLoader.h  BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  InputSystem.cpp  InputSystem.h  MaterialSystem.cpp  SceneTree.h  ShadowSystem.cpp  Skybox.h  TexturedQuad.h  glm_includes.h  image_loading_headers.cpp
Source/Runtime/Renderer/: Bindless.cpp  Bindless.h  BindlessDefines.h  Camera.cpp  Camera.h  CameraViewSystem.cpp  CameraViewSystem.h  DescriptorSetLayouts.h  Grid.cpp  Grid.h  ImGuiVulkan.cpp  ImGuiVulkan.h  ImageBasedLightSystem.cpp  ImageBasedLightSystem.h  LightSystem.cpp  LightSystem.h  MaterialDefines.h  MaterialSystem.cpp  MaterialSystem.h  MeshAllocator.cpp  MeshAllocator.h  RenderBufferInterface.h  RenderCommandEncoder.h  RenderScene.cpp  RenderScene.h  RenderState.h  Renderer.cpp  Renderer.h  SceneTree.cpp  SceneTree.h  ShadowSystem.cpp  ShadowSystem.h  Skybox.cpp  Skybox.h  SurfaceLitMaterialSystem.cpp  SurfaceLitMaterialSystem.h  TextureCache.cpp  TextureCache.h  TextureSystem.cpp  TextureSystem.h  (+3 more)
Source/Samples/MainSample/: CMakeLists.txt  Grid.h  ImGuiVulkan.cpp  ImGuiVulkan.h  Skybox.cpp  Skybox.h  main.cpp
Source/Samples/MainSample/Scripts/: compile-shaders.bat
Source/Samples/MainSample/Shaders/: environment.frag  grid.frag  grid.vert  material_common.glsl  mvp.vert  phong.glsl  primitive.vert  shader.vert  shadow.glsl  shadow_map.vert  skybox.vert  surface.frag  surface_unlit.frag  textured_quad.frag  view_set.glsl
Source/Shaders/: shader.vert
Source/VkCore/: Buffers.cpp  Buffers.h  CMakeLists.txt  CommandBufferPool.cpp  CommandBufferPool.h  CommandBuffers.cpp  CommandBuffers.h  Device.cpp  Device.h  Framebuffer.cpp  Framebuffer.h  GraphicsPipeline.cpp  GraphicsPipeline.h  GraphicsPipelineSystem.cpp  GraphicsPipelineSystem.h  Image.cpp  Image.h  PhysicalDevice.cpp  PhysicalDevice.h  RenderLoop.cpp  RenderLoop.h  RenderPass.cpp  Shader.cpp  Shader.h  ShaderSystem.cpp  ShaderSystem.h  SmallVector.h  Swapchain.cpp  Swapchain.h  Texture.cpp  Texture.h  defines.h  file_utils.h  spirv_vk.h  vk_utils.h
Source/VkRHI/: Buffers.cpp  Buffers.h  CMakeLists.txt  CommandBufferPool.h  Device.cpp  Framebuffer.cpp  Instance.cpp  RenderPass.h  Swapchain.cpp  Texture.h  Window.cpp  Window.h  debug_utils.h
Source/VkRHI/RHI/: Buffers.cpp  Buffers.h  CommandBufferPool.cpp  CommandBufferPool.h  CommandRingBuffer.cpp  CommandRingBuffer.h  Device.cpp  Device.h  Framebuffer.cpp  GraphicsPipelineCache.cpp  GraphicsPipelineCache.h  GraphicsPipelineSystem.cpp  GraphicsPipelineSystem.h  Image.cpp  Image.h  Instance.cpp  Instance.h  PhysicalDevice.cpp  PhysicalDevice.h  RenderLoop.cpp  RenderLoop.h  RenderPass.cpp  ShaderCache.cpp  ShaderCache.h  ShaderSystem.cpp  ShaderSystem.h  Swapchain.cpp  Swapchain.h  Texture.cpp  Texture.h  Window.cpp  Window.h  constants.h  debug_utils.cpp  spirv_vk.h  vk_structs.h  vk_utils.h
